Added header and footer and their stylesheets.

--- a/app/stylesheets/partials/_body.sass
+++ b/app/stylesheets/partials/_body.sass
@@ -1,9 +1,11 @@
 @import blueprint/scaffolding
+@import links
 
 body
   +blueprint-typography(true)
   +blueprint-utilities
   +blueprint-debug
   +blueprint-interaction
-  
+  +forumby-links(#00c, #03f, #009)
+
 +blueprint-scaffolding('body')
