--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -1,5 +1,13 @@
 @import blueprint/reset
+
 @import partials/base
+
+@import compass
 @import blueprint
+
 @import partials/body
 @import partials/form
+
+@import header
+@import forumby
+@import footer
