--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!! 5
 %html
   %head
-    %title= t 'forumby.title'
+    %title= t 'forumby.forum_title'
     = stylesheet_link_tag 'screen', media: 'screen, projection'
     = stylesheet_link_tag 'print', media: 'print'
     /[if lt IE 8]
