Refining Devise views.

--- a/app/stylesheets/partials/_form.sass
+++ b/app/stylesheets/partials/_form.sass
@@ -1,3 +1,5 @@
+$submit-border-radius: 32px
+$submit-padding: 12px
 $submit-background-color: #80a6d5
 $submit-text-color: #fff
 
@@ -8,12 +10,13 @@ form
     +box-shadow
 
   input[type=submit]
-    +border-radius(32px)
+    +border-radius($submit-border-radius)
 
     background-color: $submit-background-color
 
     font-size: 1.2em
+    font-weight: bold
     color: $submit-text-color
 
     border: none
-    padding: 8px
+    padding: $submit-padding
