--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -1,9 +1,14 @@
 %h2 Forgot your password?
+
 = form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f|
+
   = devise_error_messages!
+
   %p
     = f.label :email
     %br/
-    = f.email_field :email
+    = f.email_field :email, class: 'title'
+
   %p= f.submit "Send me reset password instructions"
+
 = render :partial => "devise/shared/links"
