--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -6,6 +6,11 @@
   = devise_error_messages!
 
   %p
+    = f.label :name
+    %br/
+    = f.text_field :name, class: 'title'
+
+  %p
     = f.label :email
     %br/
     = f.email_field :email
