Minor code refactoring and fixes. Symbol hash key notation converted to hash rocket.

--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -7,7 +7,7 @@
   %p
     = f.label :email
     %br/
-    = f.email_field :email, class: 'title'
+    = f.email_field :email, :class => 'title'
 
   %p= f.submit "Send me reset password instructions"
 
