--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,10 +2,10 @@
 %html
   %head
     %title= t 'forumby.forum_title'
-    = stylesheet_link_tag 'screen', media: 'screen, projection'
-    = stylesheet_link_tag 'print', media: 'print'
+    = stylesheet_link_tag 'screen', :media => 'screen, projection'
+    = stylesheet_link_tag 'print', :media => 'print'
     /[if lt IE 8]
-      = stylesheet_link_tag 'ie', media: 'screen, projection'
+      = stylesheet_link_tag 'ie', :media => 'screen, projection'
     = javascript_include_tag :defaults
     = csrf_meta_tag
     = yield :head
