--- a/app/views/members/_public_profile.html.haml
+++ b/app/views/members/_public_profile.html.haml
@@ -1,2 +1,2 @@
-%section[public_profile_member]
-  %h2= public_profile_member.name
+%section[member_public_profile]
+  %h2= member_public_profile.name
