--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -8,7 +8,7 @@
   %p
     = f.label :name
     %br/
-    = f.text_field :name, class: 'title'
+    = f.text_field :name, :class => 'title'
 
   %p
     = f.label :email
