--- a/app/stylesheets/partials/_form.sass
+++ b/app/stylesheets/partials/_form.sass
@@ -2,6 +2,7 @@ $submit-border-radius: 32px
 $submit-padding: 12px
 $submit-background-color: #80a6d5
 $submit-text-color: #fff
+$submit-font-size: 1.2em
 
 form
   +blueprint-form
@@ -14,7 +15,7 @@ form
 
     background-color: $submit-background-color
 
-    font-size: 1.2em
+    font-size: $submit-font-size
     font-weight: bold
     color: $submit-text-color
 
