Improving test suite.

--- a/app/views/members/show.html.haml
+++ b/app/views/members/show.html.haml
@@ -1,3 +1,3 @@
-%section.public-profile
+%section#show-member
   %h1= t 'members.show.heading'
-  = render :partial => 'public_profile', :object => member, :as => :member_public_profile
+  = render member
