--- a/app/views/categories/edit.html.haml
+++ b/app/views/categories/edit.html.haml
@@ -1,3 +1,3 @@
 %section#edit-category
   %h1= t 'categories.edit.heading'
-  = render_edit_form_for :categories
+  = render_edit_form_for :category
