--- a/public/stylesheets/forumby.css
+++ b/public/stylesheets/forumby.css
@@ -1,6 +1,33 @@
-/* line 3, ../../app/stylesheets/forumby.sass */
+/* line 14, ../../app/stylesheets/forumby.sass */
 #forumby {
   display: block;
   margin: 16px;
   padding: 16px;
+}
+
+/* line 20, ../../app/stylesheets/forumby.sass */
+.category {
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -o-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -khtml-border-radius: 5px;
+  border-radius: 5px;
+  display: block;
+  margin: 8px;
+  padding: 8px;
+  background-color: #edeceb;
+}
+
+/* line 28, ../../app/stylesheets/forumby.sass */
+.forum {
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -o-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -khtml-border-radius: 5px;
+  border-radius: 5px;
+  display: block;
+  padding: 8px;
+  background-color: #91b7e6;
 }
