Forums can now be nested. Forumby home now shows categories and top level forums. Moved some view logic into helpers. Added select for category and parent forum to the forum form.

--- a/app/views/categories/forums/index.html.haml
+++ b/app/views/categories/forums/index.html.haml
@@ -1,4 +1,4 @@
 %section#category-forum-index
   %h1= t 'categories.forums.index.heading', :category => category.name
-  = render :partial => 'forums/list', :collection => forums_in_page, :as => :forum_in_list
+  = render :partial => 'forums/list', :collection => forums_in_page
   %nav= will_paginate forums_in_page
