--- a/app/views/categories/_category.html.haml
+++ b/app/views/categories/_category.html.haml
@@ -1,5 +1,4 @@
 %section[category]
-  %h2= category.name
+  %h2= link_to category.name, category_path(category)
   %p= category.description
-  .category-forums
-    = render :partial => 'forums/list', :collection => forums, :as => :forum_in_list
+  .category-forums= forums_in category
