--- a/app/views/categories/forums/new.html.haml
+++ b/app/views/categories/forums/new.html.haml
@@ -1,3 +1,3 @@
 %section#category-new-forum
   %h1= t 'categories.forums.new.heading', :category => category.name
-  = render_new_form_for :forum
+  = new_form_for :forum
