--- a/app/views/categories/index.html.haml
+++ b/app/views/categories/index.html.haml
@@ -1,4 +1,4 @@
 %section#category-index
   %h1= t 'categories.index.heading'
-  = render :partial => 'list', :collection => categories_in_page
+  = list_for :categories, categories_in_page
   %nav= will_paginate categories_in_page
